add function cập nhật for DemoCreateElementByJS

--- a/DemoCreateElementByJS/CreateElementByJS.html
+++ b/DemoCreateElementByJS/CreateElementByJS.html
@@ -9,12 +9,14 @@
 </head>
 <body>
 	<div class="box">
-		<input type="text" name="ten"><button id="btn-save">Lưu</button><button id="btn-delete">Xóa</button><!-- <button id="btn-update">Sửa</button> -->
+		<input type="text" name="ten"><button id="btn-save">Lưu</button><button id="btn-delete">Xóa</button><button id="btn-update">Sửa</button>
 		<ul id="name-list">		
+			
+		</ul>
 	</div>
 
 		
-	</ul>
+
 		<script type="text/javascript" src="javascript.js"></script>
 </body>
 </html>
